custom.css
html 					{ overflow-y:scroll; }
/*body 					{ padding-top:70px; }*/

body {
	background-color: #E8ECED;
}


.navbar-default {
    background-color: #35262D;
    border-color: #E7E7E7;
}


.navbar-default .navbar-brand {
    color: #DDD;

}

.navbar-default .navbar-text{

    color: #DDD;
}


.navbar-btn {
	margin-right: 10px;
}

.paypal-button  {
	margin: 10px;
}



.event-listing {  
	    border-left: 3px solid #eee;  
/*	   border-radius: 5px;*/
	    padding: 10px 10px;  
	    margin: 5px 0px; 
	    background: #FDFDFD; 
	}  

#commentText {
	background-color: #FFFBFF;
}

.posts-container {
	margin-top: 30px;
}

.side-btn {
	margin-bottom: 10px;
	margin-top: 10px;
}
.side-btn-sm {
	margin-bottom: 5px;
}


textarea {
	border:2px solid #ccc;
	padding: 10px;
	vertical-align: top;
	width: 25%;
}

.animated {
	-webkit-transition: height 0.2s;
	-moz-transition: height 0.2s;
	transition: height 0.2s;
}


.edit-textarea {
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 14px;
	line-height: 1.428571429;
	color: #333;
	/*background: #FDFDFD; */

}

.nava-ava {
	height: 50px;
	padding: 0px;
}


/* posts stuff */

.post {
	padding-bottom: 30px;

}


.post-side {
	text-align: right;
	font-size: 13px;

}

.post-meta {
	margin-bottom: 0;
	color: #111;
	clear: both;

}

.avatar-pic 
{
	border-radius: 4px;
	float: right;
	padding-bottom: 5px;

}

.post-body {
	border: 1px solid #ccc;
	border-radius: 8px;
	background-color: #FFFBFF;
	padding-top: 12px;
	padding-bottom: 12px;	
}

.com-bq {
	font-size: 16px;
	border-left: 5px solid #aaa;
	margin-bottom: 8px;
	padding: 5px 12px;
}

.post-body-text
{

	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	display: block;
	padding: 0;
	margin: 0 ;
	font-size: 16px;
	line-height: 1.42857143;
	color: #333;
	word-break: break-all;
	word-wrap: break-word;
	background-color: #FFFBFF;
	border: 0px ;
	border-radius: 0px;
}

/* for the comments on the event live page */
.comment { 
	border: 1px solid #ccc;
	border-radius: 8px;
	background-color: #FFFBFF;
}

